# IFU-Source-ID

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/all_cubes/: config.json
experiments/extract_v1/train/: splits.json
experiments/mca_v1/scarlet2_flow_test/: tracks.csv
experiments/segment_v1/train/: config.json  metrics.jsonl
experiments/segment_v3/train/: config.json  metrics.jsonl
experiments/segment_v5/train/: config.json  metrics.jsonl  splits.json
experiments/sep_v1/data/: config.json
experiments/sep_v1/train/: config.json  metrics.jsonl
experiments/sep_v2_hungarian/train/: metrics.jsonl
experiments/sep_v4_mask/train/: metrics.jsonl
experiments/separation_v1/train/: config.json  metrics.jsonl
figures/: rois.json  summary.json  tracks.csv
methods/3D_UNet_segmentation/: evaluate.py  evaluate_extract.py  generate_cubes.py  pipeline.py  train_extract.py
notebooks/: ifu_optical_flow_starlet.ipynb
scripts/: analyse.py  evaluate.py  make_splits.py  run_mca.py  run_mca_multisource.py  train_separation.py
scripts/methods/: sliced_scarlet2.ipynb
scripts/segmentation/: analyse_segment.py  evaluate_segment.py  train_segment.py
scripts/wavelet/: detect_per_channel.py  flow_tracker.py  mca_flow.py  scarlet2_flow_tracker.py  sliced.ipynb  sliced_scarlet2.ipynb  test.ipynb  test_pipeline.py  wavelet_detect.ipynb  wavelet_detect.py  wavelet_detections.py
src/galcubecraft_sourceid/: __init__.py  dataset.py  inference.py  mca_optical_flow.py  metrics.py  models.py  targets.py  train.py
tests/: test_dataset.py
(+82 files in other folders)
