[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "galcubecraft-sourceid"
version = "0.1.0"
description = "3D source identification on GalCubeCraft synthetic IFU cubes."
authors = [{name = "Arnab Lahiry"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "h5py>=3.8",
    "torch>=2.0",
    "scikit-image>=0.21",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["src"]
